Still Fixing Spacing

--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@
     }
     @media screen and (max-width: 700px){
         #title{
-            margin-top:35%;
-            margin-bottom: 35%;
+            margin-top:25%;
+            margin-bottom: 40%;
 
         }
     }
